--- a/IOBenchmark/IOBenchmark.vcxproj.filters
+++ b/IOBenchmark/IOBenchmark.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="utf8convert.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WriterAsync.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cmdlineargs.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Blk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WriterAsync.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
