--- a/IOBenchmark/IOBenchmark.vcxproj.filters
+++ b/IOBenchmark/IOBenchmark.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="asyncwriter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="timeit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
