--- a/IOBenchmark/IOBenchmark.vcxproj
+++ b/IOBenchmark/IOBenchmark.vcxproj
@@ -107,6 +107,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,6 +144,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -169,6 +171,7 @@
     <ClInclude Include="cmdlineargs.h" />
     <ClInclude Include="IConsoleOut.h" />
     <ClInclude Include="IWriter.h" />
+    <ClInclude Include="propertybag.h" />
     <ClInclude Include="timeit.h" />
     <ClInclude Include="utf8convert.h" />
     <ClInclude Include="WriterAsync.h" />
