--- a/IOBenchmark/IOBenchmark.vcxproj
+++ b/IOBenchmark/IOBenchmark.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="cmdlineargs.cpp" />
     <ClCompile Include="IOBenchmark.cpp" />
     <ClCompile Include="IWriter.cpp" />
+    <ClCompile Include="StorageAlignmentInfo.cpp" />
     <ClCompile Include="utf8convert.cpp" />
     <ClCompile Include="WinConsoleOut.h" />
     <ClCompile Include="WriterAsync.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="IWriter.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="propertybag.h" />
+    <ClInclude Include="StorageAlignmentInfo.h" />
     <ClInclude Include="timeit.h" />
     <ClInclude Include="utf8convert.h" />
     <ClInclude Include="WriterAsync.h" />
@@ -182,6 +184,9 @@
     <ClInclude Include="WriterAsyncUnbuffered.h" />
     <ClInclude Include="WriterBasic.h" />
     <ClInclude Include="WriterException.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="cmd.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
